[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/material/player.tres" type="Material" id=2]
[ext_resource path="res://assets/animations/player_death.tres" type="Animation" id=3]
[ext_resource path="res://assets/sounds/walk1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/animations/player_movement_walking.tres" type="Animation" id=5]
[ext_resource path="res://assets/textures/cross.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/player_movement_running.tres" type="Animation" id=7]
[ext_resource path="res://assets/animations/player_movement_crouching.tres" type="Animation" id=8]
[ext_resource path="res://assets/animations/player_movement_landed.tres" type="Animation" id=9]
[ext_resource path="res://assets/animations/player_movement_idle.tres" type="Animation" id=10]
[ext_resource path="res://scenes/overlay/HUDOverlay.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[sub_resource type="CapsuleMesh" id=2]
material = ExtResource( 2 )
radius = 0.5
mid_height = 1.5

[node name="Body" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
layers = 512
cast_shadow = 0
mesh = SubResource( 2 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048063
current = true
fov = 90.0
far = 2048.0

[node name="HUD" parent="Head/Camera" instance=ExtResource( 11 )]

[node name="Crosshair" type="TextureRect" parent="Head/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 6 )

[node name="Raycast" type="RayCast" parent="Head/Camera"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="Sounds" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0 )

[node name="Footsteps" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource( 4 )
max_distance = 1024.0
emission_angle_enabled = true
doppler_tracking = 2

[node name="Animators" type="Spatial" parent="."]

[node name="MovementAnimator" type="AnimationPlayer" parent="Animators"]
root_node = NodePath("../..")
playback_process_mode = 0
anims/Crouching = ExtResource( 8 )
anims/Idle = ExtResource( 10 )
anims/Landed = ExtResource( 9 )
anims/Running = ExtResource( 7 )
anims/Walking = ExtResource( 5 )

[node name="DeathAnimator" type="AnimationPlayer" parent="Animators"]
playback_process_mode = 0
anims/Death = ExtResource( 3 )

[connection signal="health_changed" from="." to="." method="_on_Body_health_changed"]
[connection signal="health_depleted" from="." to="." method="_on_Body_health_depleted"]
